pkl-core/src/test/files/LanguageSnippetTests/input/errors/cyclicalAmendsType.pkl
import "../../input-helper/cycles/amendsFoo.pkl"

prop: amendsFoo
